# monpi

./: .gitignore  LICENSE.md  README.md  \  pyproject.toml  requirements.txt
monpi/: discord_alert.py  health.py  middleware.py
