[project]
name = "monpi"
version = "0.0.1"
authors = [
  { name="Sk Sakil Ali", email="hello@sakil.me" },
]
description = "FastAPI Application monitoring services"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
